@@ -7,6 +7,7 @@ Current:
   * Better vertical alignment of exponents.
   * The layout is now more consistent between platforms
   * Chinese translation updates from liulitchi
+  * wxMaxima now remembers the question for each answer, not only its number.
   * Now the manual can be localized, too.
 
 19.09.0:
